[project]
name = "dvc-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "j2doan", email = "j2.doan@san.rr.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ruff>=0.15.13",
]

[project.scripts]
dvc-pipeline = "dvc_pipeline:main"

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
]
